--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,12 @@
     "badge-maker": "^4.1.0",
     "ethers": "^6.13.5",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.10",
     "frontend": "file:",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "jspdf": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
