--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build --entry ./src/main.jsx",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "vite",
