--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,4 @@
 VITE_VERIDA_NETWORK=testnet
 VITE_VERIDA_APP_NAME=fomoscore
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://engage.clusterprotocol.ai/
 VITE_PRIVYID=cm7d3b8lg02fqxjod7nfhvetu
